# SE3Tools

./: .gitignore  .gitignore..gitignore  CMakeLists.txt  COPYING.txt  Doxyfile.in  README.txt  doxygen.h
SE3Tools/: CMakeLists.txt  SE3.cpp  SE3.h  SE3Tools.cpp  SO3.cpp  SO3.h  stdafx.cpp
SE3Tools_Test/: CMakeLists.txt  SE3Tools_Test.cpp  stdafx.cpp
cmake/: FindEigen3.cmake
