cmake_minimum_required(VERSION 2.6)
PROJECT(SE3Tools)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" )
find_package(Eigen3 REQUIRED)
if (EIGEN3_FOUND)
	include_directories( "${EIGEN3_INCLUDE_DIR}" )
else (EIGEN3_FOUND)
	MESSAGE("")
endif (EIGEN3_FOUND)
add_subdirectory(SE3Tools)
add_subdirectory(SE3Tools_Test)